# KDRay

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
converter/: CMakeLists.txt  blender.py  blender_util.py  mitsuba.cpp  scene.h
kdray/: CMakeLists.txt  camera.cpp  camera.h  common.h  framebuffer.cpp  framebuffer.h  kdray.cpp  kdray.h  logger.cpp  logger.h  mesh.cpp  mesh.h  optix_context.cpp  optix_context.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h  texture.cpp  texture.h
kdray/cuda/: bsdf.h  distribution.h  filter.h  fresnel.h  integrator.h  interaction.h  light.h  main.cu  math.h  microfacet_distribution.h  monte_carlo.h  sampler.h  shared_types.h  tone_map.cu
scenes/cornell_box/: scene.xml
scenes/disney_hyperion/: scene.xml
scenes/veach_mis/: scene.xml
viewer/: CMakeLists.txt  camera.cpp  camera.h  gfx_graphics.cpp  gfx_graphics.h  input.cpp  input.h  main.cpp  node.cpp  node.h  time.cpp  time.h
viewer/imgui/: imgui_impl_opengl3.cpp
